fix for powmod, added ecryption, decryption

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,5 @@ add_executable(${PROJECT_NAME}
     )
 
 #target_include_directories(${})
-
-target_link_libraries(${PROJECT_NAME} gmp.a boost_program_options.a)
+#
+target_link_libraries(${PROJECT_NAME} gmp.a boost_program_options.a libstdc++.a)
